Issue # 115 - Progress Bar and Progress Ring Fixed the progress bar and ring issues, added the center alignment option. Documentation was updated

--- a/src/scss/win/_progress-bar.scss
+++ b/src/scss/win/_progress-bar.scss
@@ -1,7 +1,8 @@
 .progress-bar {
   position: relative;
   width: 180px;
-  height: 4px;
+  float: inherit;
+  display: inline-block;
 
   .progress-circle {
     position: absolute;
