--- a/src/scss/win/_progress-ring.scss
+++ b/src/scss/win/_progress-ring.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 20px;
   height: 20px;
+  text-align: left;
+  display: inline-block;
 
   .progress-circle {
     position: absolute;
